# setuptools-scm-example

./: .gitignore  README.md  print_version.py  pyproject.toml
.github/workflows/: build.yml  release.yml
src/setuptools_scm_example/: main.py
