[build-system]
requires = ["wheel", "setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
name = "setuptools-scm-example"
description = "Example project with setuptools scm versioning"
dynamic = ["version"]

[project.scripts]
example-main = "setuptools_scm_example.main:main"

[tool.setuptools_scm]
write_to = "src/setuptools_scm_example/_version.py"
